# peak-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/routes/: health.rs
